# emprunt-js

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  index.html  requirements.txt  setup.cfg
.agent/rules/: browser.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
src/emprunt/: __init__.py  app.py  notebook.py  simulator.py
src/emprunt/static/: style.css
src/emprunt/templates/: index.html
static/: script.js  style.css
tests/: test_app.py  test_simulator.py
