[metadata]
name = emprunt
version = 0.0.0
description = Emprunt — Mortgage Simulator
author = Pierre Dangauthier
author_email = Pierre.Dangauthier@gmail.com
license = MIT

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.8

[options.packages.find]
where = src
